--- a/assets/css/uikit.themeone.css
+++ b/assets/css/uikit.themeone.css
@@ -1,3 +1,5 @@
+@import 'https://fonts.googleapis.com/css?family=Open+Sans:600,400,300';
+@import 'https://fonts.googleapis.com/css?family=Roboto+Mono:400';
 /*! UIkit 3.0.0-rc.16 | http://www.getuikit.com | (c) 2014 - 2018 YOOtheme | MIT License */
 /* ========================================================================
    Component: Base
@@ -10,7 +12,7 @@
  */
 html {
   /* 1 */
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font:normal 16px / 26px "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 16px;
   font-weight: normal;
   line-height: 1.5;
@@ -242,7 +244,7 @@ h6,
 .uk-h6 {
   margin: 0 0 20px 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-  font-weight: normal;
+  font-weight: 300;
   color: #333;
   text-transform: none;
 }
@@ -11843,11 +11845,13 @@ UIKit3 Theme One Modifications
 
 /* Navbar
  ========================================================================== */
- .tm-hero-height { min-height: "calc(100vh - 81px)"; }
+ .uk-cover-background {
+      background-position: 50% 50%;
+      background-size: cover;
+      background-repeat: no-repeat;
+  }
 
- .tm-hero-padding > * { padding-top: 81px; }
-
-.tm-navbar {
+ .tm-navbar {
   position: relative;
   background: #fff;
   box-shadow: 0px 3px 8px -4px rgba(0, 0, 0, 0.15);
