--- a/assets/css/uikit.css
+++ b/assets/css/uikit.css
@@ -1,5 +1,3 @@
-@import 'https://fonts.googleapis.com/css?family=Open+Sans:600,400,300';
-@import 'https://fonts.googleapis.com/css?family=Roboto+Mono:400';
 /*! UIkit 3.0.2 | http://www.getuikit.com | (c) 2014 - 2018 YOOtheme | MIT License */
 /* ========================================================================
    Component: Base
@@ -12,7 +10,7 @@
  */
 html {
   /* 1 */
-  font:normal 16px / 26px "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 16px;
   font-weight: normal;
   line-height: 1.5;
@@ -242,7 +240,7 @@ h5,
 h6,
 .uk-h6 {
   margin: 0 0 20px 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: normal;
   color: #333;
   text-transform: none;
@@ -3871,7 +3869,7 @@ ul.uk-nav-sub {
 /* Container
  ========================================================================== */
 .uk-navbar-container:not(.uk-navbar-transparent) {
-  background: #fff;
+  background: #f8f8f8;
 }
 /*
  * Remove pseudo elements created by micro clearfix as precaution (if Container component is used)
@@ -3984,7 +3982,7 @@ ul.uk-nav-sub {
   padding: 0 15px;
   /* 3 */
   font-size: 0.875rem;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 4 */
   text-decoration: none;
 }
@@ -4435,7 +4433,7 @@ ul.uk-nav-sub {
 }
 /* Active */
 .uk-pagination > .uk-active > * {
-  color: #39f;
+  color: #666;
 }
 /* Disabled */
 .uk-pagination > .uk-disabled > * {
@@ -7980,7 +7978,7 @@ iframe.uk-cover {
  */
 .uk-logo {
   font-size: 1.5rem;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   color: #666;
   /* 1 */
   text-decoration: none;
@@ -12044,431 +12042,4 @@ iframe.uk-cover {
   h3 {
     page-break-after: avoid;
   }
-}
-/*==========================================================================
-UIKit3 Theme One Modifications
- ========================================================================== */
-
-/* Navbar
- ========================================================================== */
- .uk-cover-background {
-      background-position: 50% 50%;
-      background-size: cover;
-      background-repeat: no-repeat;
-  }
-
- .tm-navbar {
-  position: relative;
-  background: #fff;
-  box-shadow: 0px 3px 8px -4px rgba(0, 0, 0, 0.15);
-  z-index: 1;
-}
-/* Navbar as overlay */
-.tm-navbar-overlay:not(.uk-active) {
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-}
-/* Transparent background */
-.tm-navbar-transparent {
-  border-bottom-color: transparent;
-  background: transparent;
-  box-shadow: none;
-}
-.tm-navbar-transparent .uk-navbar {
-  background: none;
-}
-/*
- * Contrast color
- */
-.tm-logo-contrast {
-  display: none;
-}
-.tm-navbar-contrast .uk-navbar {
-  color: #fff;
-}
-.tm-navbar-contrast .uk-navbar-nav > li > a {
-  color: rgba(255, 255, 255, 0.7);
-}
-.tm-navbar-contrast .uk-navbar-nav > li:hover > a,
-.tm-navbar-contrast .uk-navbar-nav > li > a:focus,
-.tm-navbar-contrast .uk-navbar-nav > li.uk-open > a {
-  color: #fff;
-}
-.tm-navbar-contrast .uk-navbar-nav > li > a:active {
-  color: #fff;
-}
-.tm-navbar-contrast .uk-navbar-nav > li.uk-active > a {
-  color: #fff;
-}
-.tm-navbar-contrast .uk-navbar-content > a:not([class]) {
-  color: rgba(255, 255, 255, 0.7);
-}
-.tm-navbar-contrast .uk-navbar-content > a:not([class]):hover {
-  color: #fff;
-}
-.tm-navbar-contrast .uk-navbar-brand {
-  color: rgba(255, 255, 255, 0.7);
-}
-.tm-navbar-contrast .uk-navbar-brand:hover,
-.tm-navbar-contrast .uk-navbar-brand:focus {
-  color: #fff;
-}
-.tm-navbar-contrast .uk-navbar-toggle {
-  color: rgba(255, 255, 255, 0.7);
-}
-.tm-navbar-contrast .uk-navbar-toggle:hover,
-.tm-navbar-contrast .uk-navbar-toggle:focus {
-  color: #fff;
-}
-.tm-navbar-contrast .uk-navbar-toggle:after {
-  background: url("../less/uikit/images/navbar-toggle-contrast.svg") 0 0 no-repeat;
-}
-.tm-navbar-contrast .tm-logo {
-  display: none;
-}
-.tm-navbar-contrast .tm-logo-contrast {
-  display: inline-block;
-}
-.tm-navbar.tm-navbar-overlay.tm-navbar-transparent.tm-navbar-contrast.uk-sticky.uk-active.uk-sticky-below.uk-sticky-fixed {
-    background-color: #1f1915;
-    Box-shadow: 0px 3px 8px -4px rgba(0, 0, 0, 0.15);
-    z-index: 1;
-}
-/* Blocks
- ========================================================================== */
-.tm-hero-height {
-  min-height: calc(100vh - 81px);
-}
-.tm-hero-padding > * {
-  padding-top: 81px;
-}
-/*
- * Footer
- */
-/* Phone landscape and bigger */
-@media (min-width: 960px) {
-  .tm-footer {
-    padding-top: 60px !important;
-    padding-bottom: 60px !important;
-  }
-}
-/* Blog
- ========================================================================== */
-.tm-container-small {
-  max-width: 800px;
-  margin: auto;
-}
-/* UK-Block-Import
- ========================================================================== */
-.uk-block {
- position:relative;
- box-sizing:border-box;
- padding-top:50px;
- padding-bottom:50px
-}
-@media (min-width:768px) {
- .uk-block {
-  padding-top:100px;
-  padding-bottom:100px
- }
-}
-.uk-block:before,.uk-block:after {
- content:"";
- display:table
-}
-.uk-block:after {
- clear:both
-}
-.uk-block>:last-child {
- margin-bottom:0
-}
-.uk-block-large {
- padding-top:50px;
- padding-bottom:50px
-}
-@media (min-width:768px) {
- .uk-block-large {
-  padding-top:100px;
-  padding-bottom:100px
- }
-}
-@media (min-width:960px) {
- .uk-block-large {
-  padding-top:150px;
-  padding-bottom:150px
- }
-}
-.uk-block-default {
- background:#fff;
-}
-.uk-block-muted {
- background:#f9f9f9
-}
-.uk-block-primary {
- background:#00a8e6
-}
-.uk-block-secondary {
- background:#1f1915
-}
-@media (min-width:2000px) {
- .uk-block-large {
-  padding-top:200px;
-  padding-bottom:200px
- }
-}
-.uk-block-default+.uk-block-default,.uk-block-muted+.uk-block-muted,.uk-block-primary+.uk-block-primary,.uk-block-secondary+.uk-block-secondary {
- padding-top:0
-}
-
-
-
-.uk-contrast h1, .uk-contrast h2, .uk-contrast h3, .uk-contrast h4, .uk-contrast h5, .uk-contrast h6 {
-    color: #fff;
-}
-.uk-heading-large {
- font-size:42px;
- line-height:48px
-}
-@media (min-width:768px) {
- .uk-heading-large {
-  font-size:54px;
-  line-height:64px
- }
-}
-.uk-button.uk-button-large {
-    border: 1px solid #c7c7c7;
-}
-.uk-contrast .uk-button:not(.uk-button-primary) {
-    border-color: #fff;
-}
-.uk-contrast .uk-button:hover:not(.uk-button-primary), .uk-contrast .uk-button:focus:not(.uk-button-primary) {
-    border-color: rgba(255,255,255,0.7);
-}
-.uk-contrast .uk-button:hover, .uk-contrast .uk-button:focus {
-    background-color: #fff;
-    color: #525255;
-}
-.uk-contrast {
-    color: #fff;
-}
-
-
-
-.uk-container-center {
-    margin-left: auto;
-    margin-right: auto;
-}
-.cm-text-uppercase {
-    text-transform: uppercase;
-}
-.uk-overlay {
- display:inline-block;
- position:relative;
- max-width:100%;
- vertical-align:middle;
- overflow:hidden;
- -webkit-transform:translateZ(0);
- margin:0
-}
-.uk-overlay.uk-border-circle {
- -webkit-mask-image:-webkit-radial-gradient(circle, white 100%, black 100%)
-}
-.uk-overlay>:first-child {
- margin-bottom:0
-}
-.uk-overlay-panel {
- position:absolute;
- top:0;
- bottom:0;
- left:0;
- right:0;
- padding:20px;
- color:#fff
-}
-.uk-overlay-panel>:last-child,.uk-overlay-panel.uk-flex>*>:last-child {
- margin-bottom:0
-}
-.uk-overlay-panel h1,.uk-overlay-panel h2,.uk-overlay-panel h3,.uk-overlay-panel h4,.uk-overlay-panel h5,.uk-overlay-panel h6 {
- color:inherit
-}
-.uk-overlay-panel a:not([class]) {
- color:inherit;
- text-decoration:underline
-}
-.uk-overlay-panel a[class*='uk-icon-']:not(.uk-icon-button) {
- color:inherit
-}
-.uk-overlay-hover:not(:hover):not(.uk-hover) .uk-overlay-panel:not(.uk-ignore) {
- opacity:0
-}
-.uk-overlay-active :not(.uk-active)>.uk-overlay-panel:not(.uk-ignore) {
- opacity:0
-}
-.uk-overlay-background {
- background:rgba(0,0,0,0.5)
-}
-.uk-overlay-image {
- padding:0
-}
-.uk-overlay-top {
- bottom:auto
-}
-.uk-overlay-bottom {
- top:auto
-}
-.uk-overlay-left {
- right:auto
-}
-.uk-overlay-right {
- left:auto
-}
-.uk-overlay-icon:before {
- content:"";
- position:absolute;
- top:50%;
- left:50%;
- margin-top:-17px;
- margin-left:-17px;
- font-size:34px;
- line-height:1;
- font-family:FontAwesome;
- text-align:center;
- color:#fff;
- height:34px;
- width:34px;
- background:url('/packages/fosphatic/uikit3-theme-one/assets/images/overlay-plus.svg') 0 0 no-repeat
-}
-.uk-overlay-fade,.uk-overlay-scale,.uk-overlay-spin,.uk-overlay-grayscale,.uk-overlay-blur,[class*='uk-overlay-slide'] {
- transition-duration:.3s;
- transition-timing-function:ease-out;
- transition-property:opacity,transform,filter
-}
-.uk-overlay-active .uk-overlay-fade,.uk-overlay-active .uk-overlay-scale,.uk-overlay-active .uk-overlay-spin,.uk-overlay-active [class*='uk-overlay-slide'] {
- transition-duration:.8s
-}
-.uk-overlay-fade {
- opacity:.7
-}
-.uk-overlay-hover:hover .uk-overlay-fade,.uk-overlay-hover.uk-hover .uk-overlay-fade,.uk-overlay-active .uk-active>.uk-overlay-fade {
- opacity:1
-}
-.uk-overlay-scale {
- -webkit-transform:scale(1);
- transform:scale(1)
-}
-.uk-overlay-hover:hover .uk-overlay-scale,.uk-overlay-hover.uk-hover .uk-overlay-scale,.uk-overlay-active .uk-active>.uk-overlay-scale {
- -webkit-transform:scale(1.1);
- transform:scale(1.1)
-}
-.uk-overlay-spin {
- -webkit-transform:scale(1) rotate(0deg);
- transform:scale(1) rotate(0deg)
-}
-.uk-overlay-hover:hover .uk-overlay-spin,.uk-overlay-hover.uk-hover .uk-overlay-spin,.uk-overlay-active .uk-active>.uk-overlay-spin {
- -webkit-transform:scale(1.1) rotate(3deg);
- transform:scale(1.1) rotate(3deg)
-}
-.uk-overlay-grayscale {
- -webkit-filter:grayscale(100%);
- filter:grayscale(100%)
-}
-.uk-overlay-hover:hover .uk-overlay-grayscale,.uk-overlay-hover.uk-hover .uk-overlay-grayscale,.uk-overlay-active .uk-active>.uk-overlay-grayscale {
- -webkit-filter:grayscale(0);
- filter:grayscale(0)
-}
-[class*='uk-overlay-slide'] {
- opacity:0
-}
-.uk-overlay-slide-top {
- -webkit-transform:translateY(-100%);
- transform:translateY(-100%)
-}
-.uk-overlay-slide-bottom {
- -webkit-transform:translateY(100%);
- transform:translateY(100%)
-}
-.uk-overlay-slide-left {
- -webkit-transform:translateX(-100%);
- transform:translateX(-100%)
-}
-.uk-overlay-slide-right {
- -webkit-transform:translateX(100%);
- transform:translateX(100%)
-}
-.uk-overlay-hover:hover [class*='uk-overlay-slide'],.uk-overlay-hover.uk-hover [class*='uk-overlay-slide'],.uk-overlay-active .uk-active>[class*='uk-overlay-slide'] {
- opacity:1;
- -webkit-transform:translateX(0) translateY(0);
- transform:translateX(0) translateY(0)
-}
-.uk-overlay-area {
- position:absolute;
- top:0;
- bottom:0;
- left:0;
- right:0;
- background:rgba(0,0,0,0.3);
- opacity:0;
- -webkit-transition:opacity .15s linear;
- transition:opacity .15s linear;
- -webkit-transform:translate3d(0, 0, 0)
-}
-.uk-overlay:hover .uk-overlay-area,.uk-overlay.uk-hover .uk-overlay-area,.uk-overlay-toggle:hover .uk-overlay-area,.uk-overlay-toggle.uk-hover .uk-overlay-area {
- opacity:1
-}
-.uk-overlay-area:empty:before {
- content:"\f002";
- position:absolute;
- top:50%;
- left:50%;
- width:50px;
- height:50px;
- margin-top:-25px;
- margin-left:-25px;
- font-size:50px;
- line-height:1;
- font-family:FontAwesome;
- text-align:center;
- color:#fff
-}
-.uk-overlay-area:not(:empty) {
- font-size:.001px
-}
-.uk-overlay-area:not(:empty):before {
- content:'';
- display:inline-block;
- height:100%;
- vertical-align:middle
-}
-.uk-overlay-area-content {
- display:inline-block;
- box-sizing:border-box;
- width:100%;
- vertical-align:middle;
- font-size:1rem;
- text-align:center;
- padding:0 15px;
- color:#fff
-}
-.uk-overlay-area-content>:last-child {
- margin-bottom:0
-}
-.uk-overlay-area-content a:not([class]),.uk-overlay-area-content a:not([class]):hover {
- color:inherit
-}
-.uk-overlay-caption {
- position:absolute;
- bottom:0;
- left:0;
- right:0;
- padding:15px;
- background:rgba(0,0,0,0.5);
- color:#fff;
- opacity:0;
- -webkit-transition:opacity .15s linear;
- transition:opacity .15s linear;
- -webkit-transform:translate3d(0, 0, 0)
-}
-.uk-overlay:hover .uk-overlay-caption,.uk-overlay.uk-hover .uk-overlay-caption,.uk-overlay-toggle:hover .uk-overlay-caption,.uk-overlay-toggle.uk-hover .uk-overlay-caption {
- opacity:1
 }
